Footer Header Sass

--- a/promo/sass/mixins.scss
+++ b/promo/sass/mixins.scss
@@ -2,6 +2,11 @@
 
 $text: #4e4e4e;
 
+$action-color:rgb(67,182,86);
+$green:rgb(67,182,86);
+
+
+
 $black: #000;
 $dark-grey: #222222;
 $medium-grey: #888888;
@@ -9,8 +14,7 @@ $light-grey: #EEEEEE;
 $near-white: #f9f9f9;
 $white: #FFF;
 
-$red: #FF4000;
-$green: #086100;
+
 
 
 
