--- a/promo/css/custom.css
+++ b/promo/css/custom.css
@@ -154,50 +154,60 @@
 .icon-alexbloom:before {
   content: "\25ca"; }
 
-p.intro {
-  font-size: 1.3333em;
-  /* 20px */
-  line-height: 1.2500em;
-  /* 25px */
-  margin-top: 1.2500em;
-  margin-bottom: 1.2500em; }
+body {
+  font-family: "adobe-garamond-pro", georgia, times, serif; }
+
+h1, h2, h3 {
+  font-family: "proxima-nova-condensed", tahoma, sans-serif; }
+
+p {
+  font-size: 1em; }
   @media screen and (min-width: 50em) {
-    p.intro {
-      font-size: 1.5000em;
+    p {
+      font-size: 1.25000em;
       /* 22.5px */
-      line-height: 1.5em;
+      line-height: 1.25em;
       /* 25px */
-      margin-top: 1.1111em;
-      margin-bottom: 1.1111em; } }
+      margin-top: 1em;
+      margin-bottom: 1em; } }
 
 blockquote {
+  display: block;
+  width: 100%;
+  text-align: center;
   font-style: italic;
   line-height: 175%;
-  font-size: 1.15em;
+  font-size: 2em;
   float: left;
   font-style: italic;
   font-weight: 400;
-  padding: 0 0 0 2em;
-  margin: 2em 0 2em; }
+  padding: 0;
+  margin: .5em 0; }
   @media screen and (min-width: 50em) {
     blockquote {
-      font-size: 1.25em; } }
+      font-size: 3em; } }
 
 blockquote:before {
-  content: "\201c";
   font-size: 5em;
   text-indent: -1.25em;
   margin-top: .25em;
   float: left; }
 
+figure {
+  display: block;
+  margin: 0 auto;
+  max-width: 50em; }
+
 figcaption {
-  font-size: 0.9em;
-  font-style: italic;
-  padding: 1.25em .75em .75em;
+  font-size: 1em;
+  padding: 1em;
   line-height: 175%; }
   @media screen and (min-width: 50em) {
     figcaption {
       font-size: 1em; } }
+
+strong {
+  font-weight: 800; }
 
 .run-in {
   font-size: .8em;
@@ -212,16 +222,20 @@ figcaption {
   letter-spacing: .1em;
   line-height: 0em; }
 
+.frame {
+  max-width: 50em;
+  text-align: center;
+  padding: 2em 4em; }
+
 .full-screen-container {
+  position: relativet;
   display: -webkit-flex;
   display: flex;
   width: 100%;
   min-height: 25em; }
 
 .full-screen-content {
-  margin: auto;
-  max-width: 50em;
-  padding: 1em; }
+  margin: auto; }
 
 .vertical-container {
   display: -webkit-flex;
@@ -299,7 +313,7 @@ article {
   .nontouchnav .next {
     right: 0; }
 
-/*! responsive-nav.js v1.0.15 by @viljamis */
+/* responsive-nav.js v1.0.15 by @viljamis */
 .js #info-1 {
   clip: rect(0 0 0 0);
   max-height: 0;
@@ -336,13 +350,15 @@ a.opened {
   -o-transform: rotateZ(-45deg); }
 
 body {
-  background-color: white; }
+  background-color: white;
+  color: #222222; }
 
 nav ul {
   margin: 0;
   padding: 0; }
   nav ul li {
-    list-style-type: none; }
+    list-style-type: none;
+    float: left; }
 nav a {
   text-decoration: none; }
 
@@ -353,255 +369,184 @@ a:active {
 a:visited {
   color: #888888; }
 
-label {
-  float: left;
-  text-align: right;
-  margin-right: 1em;
-  width: 6.25em; }
-
 #site-header {
   position: fixed;
-  z-index: 0;
-  padding: 0;
-  margin: 0;
-  background-color: #f9f9f9;
-  overflow-x: hidden;
-  overflow-y: scroll;
   top: 0;
-  bottom: 0;
-  left: 0;
-  width: 90%;
-  max-width: 18.75em;
-  -webkit-transition-duration: .5s;
-  -moz-transition-duration: .5s;
-  -ms-transition-duration: .5s;
-  -o-transition-duration: .5s;
-  transition-duration: .5s; }
+  width: 100%; }
   #site-header #logo {
-    font-size: 6em;
-    text-decoration: none;
-    margin: 0;
-    padding: .25em; }
-  #site-header a {
-    -webkit-transition-duration: .5s;
-    -moz-transition-duration: .5s;
-    -ms-transition-duration: .5s;
-    -o-transition-duration: .5s;
-    transition-duration: .5s; }
-  #site-header nav {
-    border-top: 1px solid #eeeeee; }
-    #site-header nav a {
-      display: block;
-      padding: 1em;
-      border-bottom: 1px solid #eeeeee; }
-
-#site-header.closed {
-  left: 0; }
-  #site-header.closed a {
-    -ms-transform: scale(0.85);
-    /* IE 9 */
-    -webkit-transform: scale(0.85);
-    /* Chrome, Safari, Opera */
-    transform: scale(0.85); }
-
-#site-header.open {
-  left: 0;
-  -ms-transform: scale(1, 1);
-  /* IE 9 */
-  -webkit-transform: scale(1, 1);
-  /* Chrome, Safari, Opera */
-  transform: scale(1, 1); }
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    width: 50%; }
 
 #main {
-  position: relative;
-  z-index: 1000;
-  width: 100%;
-  background-color: white;
-  -webkit-box-shadow: 0 0.1em 0.4em rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0 0.1em 0.4em rgba(0, 0, 0, 0.5);
-  -ms-box-shadow: 0 0.1em 0.4em rgba(0, 0, 0, 0.5);
-  -o-box-shadow: 0 0.1em 0.4em rgba(0, 0, 0, 0.5);
-  box-shadow: 0 0.1em 0.4em rgba(0, 0, 0, 0.5);
-  -webkit-transition-duration: .5s;
-  -moz-transition-duration: .5s;
-  -ms-transition-duration: .5s;
-  -o-transition-duration: .5s;
-  transition-duration: .5s; }
-
-#main.closed {
-  margin-left: 18.75em; }
-
-#main.open {
-  margin-left: 0; }
-
-.overflow-hidden {
-  overflow: hidden; }
-
-#primary {
-  width: 80%;
-  margin: 0 10%;
-  font-weight: bold;
-  font-size: 1em;
-  padding: 1em 0; }
-  #primary ul {
-    width: 100%;
-    max-width: 37.5em;
-    margin: 0 auto;
-    font-size: 1em; }
-  #primary li {
-    float: left;
-    padding: 0;
-    margin: 0;
-    width: 33.333%;
-    text-align: center; }
-  #primary a {
-    display: block;
-    padding: 1em; }
-
-#breadcrumb {
-  position: absolute;
-  top: 0;
-  left: 0; }
-  #breadcrumb a {
-    display: block;
-    padding: 1em;
-    float: left;
-    cursor: pointer;
-    text-decoration: none; }
-
-#name {
-  letter-spacing: .1em;
-  padding: 1.25em 1em !important; }
-
-#contact {
-  position: absolute;
-  display: block;
-  right: 0;
-  top: 0;
-  padding: 1em;
-  cursor: pointer;
-  text-decoration: none; }
-
-#search-btn {
-  position: absolute;
-  right: 0;
-  top: 0; }
-
-#search-wrap {
-  width: 90%;
-  float: left;
-  background: #eeeeee;
-  padding: 1em 5%; }
-  #search-wrap label {
-    display: none; }
-  #search-wrap .search-field {
-    width: 75%;
-    margin: 0;
-    border: 0; }
-  #search-wrap .search-submit {
-    width: 20%;
-    margin: 0;
-    border: 0; }
-
-#logo {
-  font-size: 10em;
-  display: block;
-  text-align: center; }
-
-.content section {
-  padding: 1.6667em;
-  max-width: 50em;
-  margin-left: auto;
-  margin-right: auto; }
-
-.full-width {
-  padding: 0;
-  width: 100%;
-  margin: 1.6667em 0; }
-
-#instagram-feed {
-  position: relative;
-  margin: 0;
-  padding: 1.6667em;
-  line-height: 1;
-  text-align: center; }
-  #instagram-feed .scroll-photos-btn {
-    position: absolute;
-    top: 19em;
-    right: 0;
-    padding: 1em;
-    background-color: #eeeeee; }
-  #instagram-feed .full-width-wrapper {
-    margin-left: -1.6667em;
-    margin-right: -1.6667em;
-    overflow-y: scroll;
-    background: #222222; }
-  #instagram-feed iframe {
-    padding: 0;
-    margin: 0; }
-
-#map {
-  text-align: center; }
-  #map iframe {
-    padding: 1.6667em 5%;
-    width: 90%;
-    height: 30em; }
-
-@media screen and (min-width: 56.25em) {
-  .centered-text {
-    width: 50em;
-    margin: 0 auto; } }
-
-.texture {
-  background: url(../images/header/texture.png);
   position: relative; }
 
-.logo {
-  font-size: 11em;
-  text-align: center;
-  padding: 0;
-  width: 100%; }
-  @media screen and (min-width: 56.25em) {
-    .logo {
-      font-size: 15em; } }
-  .logo span {
-    display: block;
-    padding: .1em 0; }
+#intro {
+  background-image: url(../img/quote-background.jpg);
+  background-position: 50% 0;
+  background-size: cover;
+  background-repeat: no-repeat; }
 
-@media screen and (min-width: 56.25em) {
-  #introtext {
-    width: 50em;
-    margin: 0 auto; } }
+#quote {
+  background-image: url(../img/quote-background.jpg);
+  background-position: 50% 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  background-color: #43b656; }
+
+#definition {
+  position: relative; }
+  #definition .frame {
+    background-color: #43b656;
+    width: 25em;
+    height: 25em;
+    padding: 0;
+    line-height: 1em;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%; }
+  #definition h1, #definition h2 {
+    margin-top: 2em;
+    margin-bottom: .5em; }
+  #definition #want-in {
+    position: absolute;
+    display: block;
+    bottom: 2em;
+    right: 2em;
+    font-family: "proxima-nova-condensed", tahoma, sans-serif;
+    font-weight: 800;
+    font-size: 2em;
+    margin: 0;
+    text-decoration: none;
+    color: black; }
+
+#sign-up {
+  background-color: #222222;
+  color: #888888; }
+  #sign-up .frame {
+    max-width: 37.5em; }
+  #sign-up h1, #sign-up h2, #sign-up h3 {
+    color: #43b656; }
+  #sign-up .indicates-required {
+    text-align: right;
+    color: #4e4e4e; }
+  #sign-up #TTP {
+    font-family: "proxima-nova-condensed", tahoma, sans-serif;
+    font-weight: 800;
+    text-align: center;
+    margin: 1em 0 0 0;
+    line-height: 1em;
+    color: #43b656; }
+  #sign-up p {
+    text-align: center; }
+  #sign-up a {
+    font-weight: 800;
+    color: #888888;
+    text-decoration: none;
+    border-bottom: 1px solid #43b656; }
+    #sign-up a:hover {
+      color: #43b656; }
+  #sign-up .mc-field-group {
+    margin: 0;
+    padding: .5em 0; }
+    #sign-up .mc-field-group label {
+      margin: 0;
+      padding: 0;
+      text-indent: none;
+      font-weight: bold;
+      font-family: "proxima-nova-condensed", tahoma, sans-serif;
+      text-align: center; }
+    #sign-up .mc-field-group input {
+      width: 100%;
+      margin: .5em 0 0 0;
+      padding: .5em;
+      outline: none;
+      -webkit-border: none;
+      background-color: #eeeeee; }
+      #sign-up .mc-field-group input:focus {
+        background-color: white; }
+    #sign-up .mc-field-group select {
+      display: block;
+      outline: none;
+      -webkit-border: none;
+      border: 0.5em solid #eeeeee;
+      background-color: #eeeeee;
+      margin: .5em 0;
+      padding: 0;
+      width: 100%; }
+      #sign-up .mc-field-group select:focus {
+        background-color: white;
+        border: 0.5em solid white; }
+    #sign-up .mc-field-group ul {
+      margin: .25em 0;
+      width: 100%; }
+    #sign-up .mc-field-group li {
+      float: left;
+      margin: 0 2em 0 0; }
+    #sign-up .mc-field-group input[type="radio"] {
+      float: left;
+      width: auto;
+      margin: .5em 1em 0 0; }
+  #sign-up .mc-field-group.left {
+    float: left;
+    width: 47.5%;
+    margin: 0 2.5% 0 0; }
+  #sign-up .mc-field-group.right {
+    float: left;
+    width: 47.5%;
+    margin: 0 0 0 2.5%; }
+  #sign-up input[type="submit"], #sign-up .inline-button {
+    background-color: #43b656;
+    border: none;
+    display: block;
+    padding: 1em !important;
+    text-align: center;
+    margin: 0 auto;
+    outline: none;
+    -webkit-border: none;
+    -webkit-border-radius: .5em;
+    -moz-border-radius: .5em;
+    -ms-border-radius: .5em;
+    -o-border-radius: .5em;
+    border-radius: .5em; }
+  #sign-up .mc-address-group {
+    -webkit-transition-duration: 0.5s;
+    -moz-transition-duration: 0.5s;
+    -ms-transition-duration: 0.5s;
+    -o-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+    max-height: auto;
+    opacity: 1; }
+    #sign-up .mc-address-group.hidden {
+      max-height: 0;
+      opacity: 0;
+      -webkit-transition-duration: 0.5s;
+      -moz-transition-duration: 0.5s;
+      -ms-transition-duration: 0.5s;
+      -o-transition-duration: 0.5s;
+      transition-duration: 0.5s; }
 
 #site-footer {
   float: left;
   width: 90%;
   text-align: center;
   padding: 1em 0;
-  margin: 0 5%;
-  border-top: 1px solid black; }
-  #site-footer #contact {
-    padding: 0 1.6667em 1.6667em 1.6667em;
-    margin: 0 0 1.6667em 0;
-    border-bottom: 1px dotted #8e8e8e; }
-    @media screen and (min-width: 50em) {
-      #site-footer #contact {
-        width: 40%;
-        padding: 0 5%;
-        float: left;
-        border-bottom: none;
-        border-right: 1px dotted #8e8e8e; } }
-    #site-footer #contact ul {
-      color: #4e4e4e;
-      font-size: 1em; }
-      #site-footer #contact ul [class*="icon-"] {
-        margin-left: .5em; }
-    #site-footer #contact li {
+  margin: 0 5%; }
+  #site-footer ul {
+    color: #4e4e4e;
+    font-size: 1em;
+    margin: 0 auto;
+    max-width: 18.75em; }
+    #site-footer ul li {
       float: left;
       text-align: center;
       margin: 1em 0;
-      width: 20%; }
-      #site-footer #contact li a {
+      width: 33.333%; }
+      #site-footer ul li a {
         text-decoration: none; }
   #site-footer #newsletter {
     padding: 0 1.6667em 1.6667em 1.6667em;
@@ -614,71 +559,17 @@ label {
   #site-footer #copyright {
     width: 100%; }
 
-input {
-  margin: 1em 0;
-  outline: none;
-  padding: 1em 0;
-  font-size: 1em; }
-
-input[type="text"] {
-  width: 60%;
-  background: none;
-  border: 1px solid white;
-  border-radius: 4px;
-  padding: 1em 5%;
-  -webkit-transition: border-color 0.2s;
-  -moz-transition: border-color 0.2s;
-  transition: border-color 0.2s; }
-
-input[type="submit"], .inline-button {
-  color: white;
-  padding: 1em 0;
-  text-align: center;
-  width: 25%;
-  text-decoration: none;
-  border-radius: 4px;
-  font-weight: 700; }
-
-#logo-home {
-  font-size: 10em;
-  margin: 0 0 .25em 0;
-  text-align: center; }
-
-#website-list h3 {
-  font-size: 2em;
-  padding: 0;
-  margin: .5em 0; }
-#website-list li {
-  margin: 0;
-  padding: 0; }
-#website-list a {
-  color: white;
-  display: block;
-  padding: 0 2em .5em 2em;
-  border-bottom: 1px solid #eeeeee; }
-#website-list span {
-  float: right; }
-
-.post-block:nth-of-type(1) {
-  width: 100% !important; }
-
-.post-block {
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  display: -webkit-flex;
-  display: flex; }
-  @media screen and (min-width: 50em) {
-    .post-block {
-      width: 50%;
-      min-height: 25em; } }
-  .post-block header {
-    margin: auto;
-    padding: 2em; }
-
 /* ==========================================================================
    Helper classes
    ========================================================================== */
+.overflow-hidden {
+  overflow: hidden; }
+
+.full-width {
+  padding: 0;
+  width: 100%;
+  margin: 1.6667em 0; }
+
 .ir {
   background-color: transparent;
   border: 0;
