--- a/promo/sass/custom.scss
+++ b/promo/sass/custom.scss
@@ -8,24 +8,26 @@
 @import "typography";
 @import "modules";
 
+
+
+// TYPE & TEXT
 body{
 	background-color: $white;
+	color:$dark-grey;
 }
-
 nav {
-	
 	ul{
 	    margin:0;
 	    padding:0;	
 		li{
 			list-style-type:none;
+			float:left;
 		}
 	}
 	a{
 		text-decoration:none;
 	}
 }
-
 a{	
 	&:hover{
 		color:$dark-grey;
@@ -39,322 +41,258 @@ a{
 		color:$medium-grey;
 	}
 }
-
 label {
-    float: left;
-    text-align: right;
-    margin-right: 1em;
-    width:(em(100));
+    //float: left;
+    //text-align: right;
+    //margin-right: 1em;
+    //width:(em(100));
+}
+input{
+	//margin:1em 0;
+	//outline:none;
+	//padding:1em 0;
+	////height:2em;
+	//font-size:1em;
+}
+input[type="text"] {
+//width: 60%;
+//background: none;
+//border: 1px solid white;
+//border-radius: 4px;
+//padding: 1em 5%;
+//-webkit-transition: border-color 0.2s;
+//-moz-transition: border-color 0.2s;
+//transition: border-color 0.2s;
+}
+input[type="submit"], .inline-button {
+//color: white;
+//padding: 1em 0;
+//text-align:center;
+//width:25%;
+//text-decoration: none;
+//border-radius: 4px;
+//font-weight: 700;
+
 }
 
+// HEADER
 #site-header{
 	position:fixed;
-	z-index:0;
-		    padding:0;
-		    margin:0;
-			background-color:#f9f9f9;
-			//background-color:$black;
-			overflow-x:hidden;
-			overflow-y:scroll;
-			top:0;
-			bottom:0;
-			left:0;				
-			@media screen and (min-width: (em(600))){
-			   	//position:relative;
-			}
-			
-			width:90%;
-			max-width:(em(300));
-			
-			
+	top:0;
+	width:100%;
+
 			#logo{
-				font-size:6em;
-				text-decoration:none;
-				margin:0;
-				padding:.25em;
-			}
-			a{
-				@include half-second-transition;
-			}
-			nav{
-				border-top:1px solid $light-grey;
-				a{
-					display:block;
-					padding: 1em;
-					border-bottom:1px solid $light-grey;				
-				}
+				display:block;
+				//font-size:1em;
+				text-align:center;
+				margin:0 auto;
+				width:50%;
 			}
 			
-			@include half-second-transition;
 }
-#site-header.closed{
-	left:0;
-	a{
-		-ms-transform: scale(0.85); /* IE 9 */
-		-webkit-transform: scale(0.85); /* Chrome, Safari, Opera */
-		transform: scale(0.85);
-	}
-}
-#site-header.open{
-	left:0;
-	-ms-transform: scale(1,1); /* IE 9 */
-	-webkit-transform: scale(1,1); /* Chrome, Safari, Opera */
-	transform: scale(1,1);	
-}
+
+// LAYOUT
 #main{
 	position:relative;
-	z-index:1000;
-	width:100%;
-	background-color:$white;
-	@include drop-shadow;
-	@include half-second-transition;
-}
-#main.closed{
-	margin-left:(em(300));
-}
-#main.open{
-	margin-left:0;
 }
 
-.overflow-hidden{
-	overflow:hidden;
+#intro{
+	background-image:url(../img/quote-background.jpg);
+	@include full-bleed-background;
 }
 
+#quote{
+	background-image:url(../img/quote-background.jpg);
+	@include full-bleed-background;
+	color:$white;
+	background-color:$green;
+}
+#definition{
+	position:relative;
+	.frame{
+		background-color:$green;
+		width:(em(400));
+		height:(em(400));
+		padding:0;
+		line-height:1em;
+		@include perfect-circle;
+	}
+	h1,h2{
+		margin-top:2em;
+		margin-bottom:.5em;
+	}
+	#want-in{
+		position:absolute;
+		display:block;
+		bottom:2em;
+		right:2em;	
+		font-family:"proxima-nova-condensed", tahoma, sans-serif;
+		font-weight:800;
+		font-size:2em;
+		margin:0;
+		text-decoration:none;
+		color:$black;
+	}
+}
 
-#primary{
-		width:80%;
-		margin:0 10%;
-		font-weight:bold;
-		font-size: 1em;
-		padding:1em 0;
-		
-		@media screen and (min-width: (em(900))){
+#sign-up{
+	background-color:$dark-grey;
+	color:$medium-grey;
+	
+	.frame{
+		max-width:(em(600));
+	}
+	
+	
+	h1,h2,h3{
+		color:$green;
+	}
+	.indicates-required{
+		text-align:right;
+		color:$text;
+		//font-size:.75em;
+	}
+	#TTP{
+		font-family:"proxima-nova-condensed", tahoma, sans-serif;
+		font-weight:800;
+		text-align:center;
+		margin:1em 0 0 0;
+		line-height:1em;
+		color:$green;
+	}
+	p{
+		text-align:center;
+		//font-size:1em;
+		//line-height:1.25em;
+	}
+	a{
+		font-weight:800;
+		color:$medium-grey;
+		text-decoration:none;
+		border-bottom:1px solid $green;
+		&:hover{
+			color:$green;
+			
 		}
+	}
+	.mc-field-group{
+		margin:0;
+		padding:.5em 0;
+		//text-align:left;
 		
-		ul{
+		
+		
+		label{
+			margin:0;
+			padding:0;
+			text-indent:none;
+			font-weight:bold;
+			font-family:"proxima-nova-condensed", tahoma, sans-serif;
+			text-align:center;
+		}
+		input{
 			width:100%;
-			max-width:(em(600));
-			margin:0 auto;
-			font-size: 1em;
+			margin:.5em 0 0 0;
+			padding:.5em;
+			outline:none;
+			-webkit-border:none;
+			background-color:$light-grey;
+			&:focus{
+				background-color:$white;
+			}
+		}
+		select{
+		display:block;
+		outline:none;
+		-webkit-border:none;
+		border:.5em solid $light-grey;
+		background-color:$light-grey;
+		&:focus{
+			background-color:$white;
+			border:.5em solid $white;
+		}
+		margin:.5em 0;
+		padding:0;
+		width:100%;	
+		}
+		ul{
+			margin:.25em 0;
+			width:100%;
 		}
 		li{
 			float:left;
-			padding: 0;
-			margin:0;
-			width:33.333%;
-			text-align:center;
+			margin:0 2em 0 0;
+			//width:25%;
 		}
-		a{
-			display:block;
-			padding:1em;
-		}
-}
-	
-#breadcrumb{
-	position:absolute;
-	top:0;
-	left:0;
-	a{
-		display:block;
-		padding:1em;
-		float:left;
-		cursor:pointer;
-		text-decoration:none;
-	}
-}
-#nav-toggle{	
-	
-}
-#name{
-	letter-spacing:.1em;
-	padding:1.25em 1em !important;
-}
-
-#contact{
-		position:absolute;
-		display:block;
-		right:0;
-		top:0;
-		padding:1em;
-		cursor:pointer;
-		text-decoration:none;
-	}
-#search-btn{
-		position:absolute;
-		right:0;
-		top:0;
-	}
-	
-	
-	#search-wrap{
-		width:90%;
-		float:left;
-		background:$light-grey;
-		padding:1em 5%;
-		
-		label{
-			display:none;
+		input[type="radio"]{
+			float:left;
+			width:auto;
+			margin:.5em 1em 0 0;
 		}
 		
-		.search-field{
-			width:75%;
-			margin:0;
-			border:0;
-		}
-		.search-submit{
-			width:20%;
-			margin:0;
-			border:0;
-		}
-	}	
-	
-	#logo{
-		font-size:10em;
+	}
+	.mc-field-group.left{
+		float:left;
+		width:47.5%;
+		margin:0 2.5% 0 0;
+	}
+	.mc-field-group.right{
+		float:left;
+		width:47.5%;
+		margin:0 0 0 2.5%;
+	}
+	input[type="submit"], .inline-button{
+		background-color:$green;
+		border:none;
 		display:block;
+		padding: 1em!important;
 		text-align:center;
-	}
-
-// LAYOUT
-
-section{
-	//padding:1.6667em;
-}
-
-.content{
-	section{
-	padding:1.6667em;
-
-		max-width:(em(800));
-		margin-left:auto;
-		margin-right:auto;
-	}
-}
-
-.full-width{
-	padding:0;
-	width:100%;
-	margin:1.6667em 0;
-}
-
-
-#instagram-feed{
-	position:relative;
-	margin:0;
-	padding:1.6667em;
-	line-height: 1;
-	text-align:center;
-	
-	.scroll-photos-btn{
-		position:absolute;
-		top:3em + 16em;
-		right:0;
-		padding:1em;
-		background-color:$light-grey;
-	}
-	
-	.full-width-wrapper{
-		margin-left:-1.6667em;
-		margin-right:-1.6667em;
-		overflow-y:scroll;
-		background:$dark-grey;
-	}
-	iframe{
-		padding:0;
-		margin:0;
-	}
-}
-
-#map{
-	text-align:center;
-	iframe{
-		padding:1.6667em 5%;
-		width:90%;
-		height:30em;
-	}
-}
-
-
-.centered-text{
-	@media screen and (min-width: (em(900))){
-		width:(em(800));
 		margin:0 auto;
-	}
-}
-
-.texture{
-	background:url(../images/header/texture.png);
-	position:relative;
-}
-
-.logo{
-	font-size:11em;
-	text-align:center;
-	padding:0;
-	width:100%;
-	
-	@media screen and (min-width: (em(900))){
-		font-size:15em;
+		outline:none;
+		-webkit-border:none;
+		@include half-em-border-radius;
 	}
 	
-	span{
-		display:block;
-		padding:.1em 0;
+	
+	.mc-address-group{
+		@include half-second-transition;
+		max-height:auto;
+		opacity:1;
+		&.hidden{
+			max-height:0;
+			opacity:0;
+			@include half-second-transition;
+		}
 	}
 	
 }
 
-#introtext{
-	@media screen and (min-width: (em(900))){
-		width:(em(800));
-		margin:0 auto;
-	}
-}
 
-
-	
-	
-
+// FOOTER
 #site-footer{
     float:left;
 	width:90%;
     text-align:center;
 	padding:1em 0;
 	margin:0 5%;
-	//background-color:$light-grey;
-	border-top:1px solid $black;
-	
-	#contact{
-		padding:0 1.6667em 1.6667em 1.6667em;
-		margin: 0 0 1.6667em 0;	
-		border-bottom: 1px dotted #8e8e8e;	
-			
-			@media screen and (min-width: (em(800))){
-			width:40%;
-			padding:0 5%;
+	ul{
+		color:$text;
+		font-size: 1em;
+		margin:0 auto;
+		max-width:(em(300));			
+		li{
 			float:left;
-			border-bottom: none;	
-			border-right: 1px dotted #8e8e8e;	
+			text-align:center;
+			margin:1em 0;
+			width:33.333%;
+			a{
+				text-decoration:none;
+			
 			}
-			ul{
-				color:$text;
-				font-size: 1em;
-				[class*="icon-"]{
-					margin-left:.5em;
-				}
-			}
-			li{
-				float:left;
-				text-align:center;
-				margin:1em 0;
-				width:20%;
-				
-				a{
-					text-decoration:none;
-					
-				}
-			}
+	 }
+}
 		
-	}
+	
 	
 	#newsletter{
 		padding:0 1.6667em 1.6667em 1.6667em;	
@@ -371,106 +309,24 @@ section{
 
 }
 
-input{
-	margin:1em 0;
-	outline:none;
-	padding:1em 0;
-	//height:2em;
-	font-size:1em;
-}
-
-input[type="text"] {
-
-width: 60%;
-background: none;
-border: 1px solid white;
-border-radius: 4px;
-padding: 1em 5%;
--webkit-transition: border-color 0.2s;
--moz-transition: border-color 0.2s;
-transition: border-color 0.2s;
-}
-
-input[type="submit"], .inline-button {
-color: white;
-padding: 1em 0;
-text-align:center;
-width:25%;
-text-decoration: none;
-border-radius: 4px;
-font-weight: 700;
-
-}
-
-
-
-
-//PAGE BY PAGE
-
-//HOME
-
-#logo-home{
-	font-size:10em;
-	margin:0 0 .25em 0;
-	text-align:center;
-}
-
-//PERSONAL
-
-//PROFESSIONAL
-
-#website-list{
-	h3{
-		font-size:2em;
-		padding:0;
-		margin:.5em 0;
-	}
-	li{
-		margin:0;
-		padding:0;
-	}
-	a{
-		color:$white;
-		display:block;
-		padding:0 2em .5em 2em;
-		border-bottom:1px solid $light-grey;
-	}
-	span{
-		float:right;
-	}
-}
-
-.post-block:nth-of-type(1) {
-width: 100%!important;
-}
-
-.post-block {
-	margin:0;
-	padding:0;
-	text-align: center;
-	display: -webkit-flex;
-	display: flex;
-	@media screen and (min-width: (em(800))){
-	width: 50%;	
-	min-height:(em(400));
-	}
-	header{
-		margin:auto;
-		padding:2em;
-	}
-}
-
-//SOCIETAL
-
-//CONTACT
-
-   
 
 
 
 /* ==========================================================================
    Helper classes
    ========================================================================== */
+
+.overflow-hidden{
+	overflow:hidden;
+}
+.full-width{
+	padding:0;
+	width:100%;
+	margin:1.6667em 0;
+}
+
+
+
 
 .ir {
     background-color: transparent;
