--- a/promo/css/custom.css
+++ b/promo/css/custom.css
@@ -176,16 +176,22 @@ blockquote {
   width: 100%;
   text-align: center;
   font-style: italic;
-  line-height: 175%;
-  font-size: 2em;
+  line-height: 150%;
+  font-size: 2.5em;
   float: left;
   font-style: italic;
   font-weight: 400;
   padding: 0;
   margin: .5em 0; }
-  @media screen and (min-width: 50em) {
+  @media screen and (min-width: 31.25em) {
     blockquote {
       font-size: 3em; } }
+  @media screen and (min-width: 50em) {
+    blockquote {
+      font-size: 3.5em; } }
+  @media screen and (min-width: 87.5em) {
+    blockquote {
+      font-size: 5em; } }
 
 blockquote:before {
   font-size: 5em;
@@ -199,12 +205,15 @@ figure {
   max-width: 50em; }
 
 figcaption {
-  font-size: 1em;
-  padding: 1em;
-  line-height: 175%; }
+  font-size: 1.25em;
+  padding: 1em 0;
+  line-height: 150%; }
   @media screen and (min-width: 50em) {
     figcaption {
-      font-size: 1em; } }
+      font-size: 1.5em; } }
+  @media screen and (min-width: 87.5em) {
+    figcaption {
+      font-size: 2em; } }
 
 strong {
   font-weight: 800; }
@@ -225,10 +234,10 @@ strong {
 .frame {
   max-width: 50em;
   text-align: center;
-  padding: 2em 4em; }
+  padding: 2em; }
 
 .full-screen-container {
-  position: relativet;
+  position: relative;
   display: -webkit-flex;
   display: flex;
   width: 100%;
@@ -383,35 +392,85 @@ a:visited {
   position: relative; }
 
 #intro {
-  background-image: url(../img/quote-background.jpg);
-  background-position: 50% 0;
+  background-image: url(../img/home_hero.jpg);
+  background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat; }
+  #intro .frame {
+    display: none;
+    background-color: #43b656; }
+  #intro .image-filter {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-clip: text;
+    -webkit-background-clip: text;
+    background-image: url(../img/home_hero.jpg);
+    -webkit-text-fill-color: transparent;
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat; }
+  #intro #logo-mask {
+    text-align: center;
+    width: 100%; }
+    #intro #logo-mask h1 {
+      font-size: 12em;
+      margin: 1em 0; }
 
 #quote {
-  background-image: url(../img/quote-background.jpg);
-  background-position: 50% 0;
+  position: relative;
+  background-image: url(../img/quote_bg_2000.jpg);
+  background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
-  color: white;
-  background-color: #43b656; }
+  color: white; }
+  #quote .frame {
+    position: relative;
+    z-index: 2; }
+  #quote figure {
+    margin: 0 auto;
+    padding: 0;
+    width: 15.625em; }
+    @media screen and (min-width: 31.25em) {
+      #quote figure {
+        width: 18.75em; } }
+    @media screen and (min-width: 50em) {
+      #quote figure {
+        width: 37.5em; } }
+    @media screen and (min-width: 87.5em) {
+      #quote figure {
+        width: 62.5em; } }
+  #quote .color-filter {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #43b656;
+    opacity: .65;
+    z-index: 1; }
 
 #definition {
   position: relative; }
   #definition .frame {
     background-color: #43b656;
-    width: 25em;
-    height: 25em;
+    width: 22.5em;
+    height: 22.5em;
     padding: 0;
     line-height: 1em;
+    border: 0.5em double black;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     border-radius: 50%; }
   #definition h1, #definition h2 {
-    margin-top: 2em;
-    margin-bottom: .5em; }
+    font-size: 2.5em;
+    margin: 1.75em 0 .75em 0; }
+  #definition p {
+    font-size: 1.5em; }
   #definition #want-in {
     position: absolute;
     display: block;
