--- a/promo/sass/mixins.scss
+++ b/promo/sass/mixins.scss
@@ -25,7 +25,7 @@ $white: #FFF;
 }
 
 @mixin full-bleed-background{
-background-position:50% 0;
+background-position:50% 50%;
 background-size:cover;
 background-repeat:no-repeat;
 }
