--- a/promo/sass/typography.scss
+++ b/promo/sass/typography.scss
@@ -188,16 +188,21 @@ blockquote{
 	width:100%;
 	text-align:center;
 	font-style:italic; 
-	line-height:175%; 
-	font-size:2em; 
+	line-height:150%; 
+	font-size:2.5em; 
 	float:left;  
 	font-style:italic; 
 	font-weight:400; 
 	padding: 0; 
 	margin: .5em 0;
-	
-	@media screen and (min-width:(em(800))){
+	@media screen and (min-width:(em(500))){
 		font-size:3em;
+	}
+	@media screen and (min-width:(em(800))){
+		font-size:3.5em;
+	}
+	@media screen and (min-width:(em(1400))){
+		font-size:5em;
 	}
 }
 
@@ -216,11 +221,14 @@ figure{
 }
 
 figcaption{
-font-size:1em;
-padding:1em;
-line-height:175%;
+font-size:1.25em;
+padding:1em 0;
+line-height:150%;
 	@media screen and (min-width:(em(800))){
-		font-size:1em;
+		font-size:1.5em;
+	}
+	@media screen and (min-width:(em(1400))){
+		font-size:2em;
 	}
 }
 
