--- a/promo/sass/custom.scss
+++ b/promo/sass/custom.scss
@@ -98,12 +98,26 @@ input[type="submit"], .inline-button {
 	background-image:url(../img/home_hero.jpg);
 	@include full-bleed-background;
 	.frame{
+		//position:relative;
 		//display:none;
-		//background-color:$green;
-		a{
+		//
+		#arrow{
+			position:absolute;
+			top:3em;
+			left:43%;
+			width:4em;			
 			display:block;
-			color:$green;
+			cursor:pointer;
+			color:$black;
 			text-decoration:none;
+			z-index:1000;
+			//background-color:$black;
+			//@include perfect-circle;
+			padding:1.75em 1.25em .75em 1.25em;
+			
+			img{
+				width:100%;
+			}
 		}
 	}
 	.image-filter{
@@ -123,10 +137,20 @@ input[type="submit"], .inline-button {
 		
 		text-align:center;
 		width:100%;
+		padding-top:20%;
 		h1{
 			//position:fixed;
-			font-size:12em;
+			font-size:4em;
 			margin:1em 0;
+			@media screen and (min-width:(em(600))){
+				font-size:6em;
+			}
+			@media screen and (min-width:(em(800))){
+				font-size:8em;
+			}
+			@media screen and (min-width:(em(1400))){
+				font-size:10em;
+			}
 		}
 	}
 	
@@ -140,6 +164,14 @@ input[type="submit"], .inline-button {
 	.frame{
 		position:relative;
 		z-index:2;
+	}
+	a{
+		color:$white;
+		text-decoration:none;
+		border-bottom:1px solid $black;
+		&:hover{
+			color:$black;
+		}
 	}
 	figure{
 		margin:0 auto;
@@ -156,7 +188,6 @@ input[type="submit"], .inline-button {
 		}
 	}
 
-	
 	.color-filter{
 		position:absolute;
 		top:0;
@@ -170,7 +201,8 @@ input[type="submit"], .inline-button {
 }
 #definition{
 	position:relative;
-	//background-color:$light-grey;
+	background-color:$light-grey;
+	text-align:center;
 	.frame{
 		background-color:$green;
 		width:(em(360));
@@ -178,11 +210,33 @@ input[type="submit"], .inline-button {
 		padding:0;
 		line-height:1em;
 		border:.5em double $black;
-		@include perfect-circle;
+		//transform:rotate(5deg);
+		//&:hover{
+		//	transform:rotate(45deg);
+		//}
+		//@include quarter-second-transition;
+		//@include perfect-circle;
+		//&:after{
+		//	font-family:'AlexBloom';
+		//	font-weight:bold;
+		//	font-size:2em;
+		//	vertical-align:baseline;
+		//	line-height:0;
+		//	content:"\52";
+		//	position:absolute;
+		//	top:52%;
+		//	left:100%;
+		//	//width:5em;
+		//	padding:0 0 0 .5em;
+		//	letter-spacing:-.35em;
+		//	margin-right:1em;
+		//	border-top:2px solid $black;
+		//}
 	}
 	h1,h2{
+		color:$white;
 	    font-size:2.5em;
-		margin:1.75em 0 .75em 0;
+		margin:2.125em 0 .75em 0;
 
 	}
 	p{
@@ -192,7 +246,10 @@ input[type="submit"], .inline-button {
 		position:absolute;
 		display:block;
 		bottom:2em;
-		right:2em;	
+		left:0;
+		right:0;
+		//width:100%;
+		text-align:center;	
 		font-family:"proxima-nova-condensed", tahoma, sans-serif;
 		font-weight:800;
 		font-size:2em;
