--- a/promo/css/custom.css
+++ b/promo/css/custom.css
@@ -176,7 +176,7 @@ blockquote {
   width: 100%;
   text-align: center;
   font-style: italic;
-  line-height: 150%;
+  line-height: 125%;
   font-size: 2.5em;
   float: left;
   font-style: italic;
@@ -189,9 +189,6 @@ blockquote {
   @media screen and (min-width: 50em) {
     blockquote {
       font-size: 3.5em; } }
-  @media screen and (min-width: 87.5em) {
-    blockquote {
-      font-size: 5em; } }
 
 blockquote:before {
   font-size: 5em;
@@ -210,10 +207,7 @@ figcaption {
   line-height: 150%; }
   @media screen and (min-width: 50em) {
     figcaption {
-      font-size: 1.5em; } }
-  @media screen and (min-width: 87.5em) {
-    figcaption {
-      font-size: 2em; } }
+      font-size: 1.25em; } }
 
 strong {
   font-weight: 800; }
@@ -235,6 +229,18 @@ strong {
   max-width: 50em;
   text-align: center;
   padding: 2em; }
+
+.button {
+  font-family: 'proxima-nova-condensed', helvetica, arial, sans-serif;
+  font-size: 1.5em;
+  font-weight: 800;
+  display: inline-block;
+  border: 0.25em solid white;
+  padding: .5em 1.5em;
+  margin: 3em 1em; }
+  .button:hover {
+    background-color: white;
+    color: #43b656 !important; }
 
 .full-screen-container {
   position: relative;
@@ -391,26 +397,43 @@ a:visited {
 #main {
   position: relative; }
 
+/* ==========================================================================
+   Intro Section
+   ========================================================================== */
 #intro {
   background-image: url(../img/home_hero.jpg);
-  background-position: 50% 50%;
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-position: 50% 20%; }
+  #intro .frame figure {
+    margin: 0 auto 1em;
+    padding: 0;
+    width: 15.625em; }
+    @media screen and (min-width: 31.25em) {
+      #intro .frame figure {
+        width: 18.75em; } }
+    @media screen and (min-width: 50em) {
+      #intro .frame figure {
+        width: 37.5em; } }
+    #intro .frame figure a {
+      color: black;
+      font-weight: bold; }
   #intro .frame #arrow {
     position: absolute;
-    top: 3em;
-    left: 43%;
-    width: 4em;
-    display: block;
-    cursor: pointer;
-    color: black;
-    text-decoration: none;
-    z-index: 1000;
-    padding: 1.75em 1.25em .75em 1.25em; }
-    #intro .frame #arrow img {
-      width: 100%; }
+    top: 7em;
+    left: 0;
+    right: 0;
+    z-index: 1000; }
+    #intro .frame #arrow .wrap {
+      display: block;
+      cursor: pointer;
+      color: black;
+      text-decoration: none;
+      width: 4em;
+      margin: 0 auto; }
+      #intro .frame #arrow .wrap img {
+        width: 100%; }
   #intro .image-filter {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -419,16 +442,17 @@ a:visited {
     -webkit-background-clip: text;
     background-image: url(../img/home_hero.jpg);
     -webkit-text-fill-color: transparent;
-    background-position: 50% 50%;
     background-size: cover;
-    background-repeat: no-repeat; }
+    background-position: 50% 25%;
+    background-repeat: repeat; }
   #intro #logo-mask {
     text-align: center;
     width: 100%;
-    padding-top: 20%; }
+    margin: auto; }
     #intro #logo-mask h1 {
       font-size: 4em;
-      margin: 1em 0; }
+      margin: 0 0;
+      padding: 0; }
       @media screen and (min-width: 37.5em) {
         #intro #logo-mask h1 {
           font-size: 6em; } }
@@ -439,68 +463,141 @@ a:visited {
         #intro #logo-mask h1 {
           font-size: 10em; } }
 
-#quote {
+#intro-arrow {
+  display: block;
+  -webkit-animation: myfirst 8s ease-in-out 1s infinite alternate;
+  /* Chrome, Safari, Opera */
+  animation: myfirst 8s ease-in-out 1s infinite alternate;
+  /* Standard syntax */ }
+
+@-webkit-keyframes myfirst {
+  0% {
+    padding-top: 0; }
+
+  05% {
+    padding-top: .5em; }
+
+  10% {
+    padding-top: 0; }
+
+  90% {
+    padding-top: 0; }
+
+  95% {
+    padding-top: .5em; }
+
+  100% {
+    padding-top: 0; } }
+
+/* ==========================================================================
+   Question Section
+   ========================================================================== */
+#question {
   position: relative;
   background-image: url(../img/quote_bg_2000.jpg);
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
   color: white; }
-  #quote .frame {
+  #question .frame {
     position: relative;
     z-index: 2; }
-  #quote a {
+  #question a {
     color: white;
-    text-decoration: none;
-    border-bottom: 1px solid black; }
-    #quote a:hover {
-      color: black; }
-  #quote figure {
-    margin: 0 auto;
-    padding: 0;
-    width: 15.625em; }
-    @media screen and (min-width: 31.25em) {
-      #quote figure {
-        width: 18.75em; } }
-    @media screen and (min-width: 50em) {
-      #quote figure {
-        width: 37.5em; } }
-    @media screen and (min-width: 87.5em) {
-      #quote figure {
-        width: 62.5em; } }
-  #quote .color-filter {
+    text-decoration: none; }
+  #question h1 {
+    color: white; }
+  #question .color-filter {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     background-color: #43b656;
-    opacity: .65;
+    opacity: .75;
     z-index: 1; }
+  #question #definition-link {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    padding: 1em;
+    text-decoration: none;
+    border: none;
+    z-index: 2;
+    font-weight: bold; }
 
+#because {
+  background-color: black;
+  color: #43b656;
+  font-family: 'proxima-nova-condensed', helvetica, arial, sans-serif; }
+  #because a {
+    color: #43b656;
+    font-weight: bold; }
+
+#reasons {
+  font-size: 1.5em; }
+
+.two-columns li {
+  float: left;
+  width: 50%; }
+
+/* ==========================================================================
+   Definition Section
+   ========================================================================== */
 #definition {
   position: relative;
   background-color: #eeeeee;
+  background-image: url(../img/cartographer.jpg);
   text-align: center; }
-  #definition .frame {
+  #definition .frame p {
+    font-family: 'proxima-nova-condensed', helvetica, sans-serif; }
+  #definition .circle {
     background-color: #43b656;
-    width: 22.5em;
-    height: 22.5em;
-    padding: 0;
+    width: 18.75em;
+    padding: 0 0 3em;
+    margin: 0 auto;
     line-height: 1em;
-    border: 0.5em double black; }
-  #definition h1, #definition h2 {
-    color: white;
-    font-size: 2.5em;
-    margin: 2.125em 0 .75em 0; }
-  #definition p {
-    font-size: 1.5em; }
+    border: 0.5em solid black; }
+    @media screen and (min-width: 43.75em) {
+      #definition .circle {
+        width: 22.5em;
+        height: 22.5em;
+        padding: 0;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        border-radius: 50%; } }
+    #definition .circle h1, #definition .circle h2 {
+      color: white;
+      font-size: 2.5em;
+      margin: 2.125em 0 .75em 0; }
+    #definition .circle p {
+      font-size: 1.5em; }
+  #definition .stretch-arrow-down {
+    position: relative;
+    height: 6em;
+    width: .125em;
+    margin: 0 auto 3em;
+    background-color: black; }
+    #definition .stretch-arrow-down:before, #definition .stretch-arrow-down:after {
+      position: absolute;
+      display: block;
+      content: ' ';
+      background-color: black;
+      height: 3em;
+      width: .125em;
+      bottom: -.5em;
+      border-radius: 0.125em; }
+    #definition .stretch-arrow-down:before {
+      left: -1em;
+      transform: rotate(-45deg); }
+    #definition .stretch-arrow-down:after {
+      right: -1em;
+      transform: rotate(45deg); }
   #definition #want-in {
-    position: absolute;
-    display: block;
-    bottom: 2em;
-    left: 0;
-    right: 0;
     text-align: center;
     font-family: "proxima-nova-condensed", tahoma, sans-serif;
     font-weight: 800;
@@ -509,8 +606,11 @@ a:visited {
     text-decoration: none;
     color: black; }
 
+/* ==========================================================================
+   Sign Up Form
+   ========================================================================== */
 #sign-up {
-  background-color: #222222;
+  background-color: white;
   color: #888888; }
   #sign-up .frame {
     max-width: 37.5em; }
@@ -537,7 +637,8 @@ a:visited {
       color: #43b656; }
   #sign-up .mc-field-group {
     margin: 0;
-    padding: .5em 0; }
+    padding: .5em 0;
+    text-align: left; }
     #sign-up .mc-field-group label {
       margin: 0;
       padding: 0;
@@ -549,9 +650,9 @@ a:visited {
       width: 100%;
       margin: .5em 0 0 0;
       padding: .5em;
+      border: 2px solid black;
       outline: none;
-      -webkit-border: none;
-      background-color: #eeeeee; }
+      -webkit-border: none; }
       #sign-up .mc-field-group input:focus {
         background-color: white; }
     #sign-up .mc-field-group select {
@@ -615,12 +716,28 @@ a:visited {
       -o-transition-duration: 0.5s;
       transition-duration: 0.5s; }
 
+#smore {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  text-align: center;
+  padding: 1em;
+  text-decoration: none;
+  border: none; }
+
+/* ==========================================================================
+   Footer
+   ========================================================================== */
 #site-footer {
   float: left;
-  width: 90%;
+  width: 100%;
   text-align: center;
-  padding: 1em 0;
-  margin: 0 5%; }
+  padding: 1em 0 0;
+  margin: 0;
+  background-color: white;
+  z-index: -1;
+  color: #222222; }
   #site-footer ul {
     color: #4e4e4e;
     font-size: 1em;
@@ -633,6 +750,38 @@ a:visited {
       width: 33.333%; }
       #site-footer ul li a {
         text-decoration: none; }
+  #site-footer .up-arrow-tent {
+    position: relative;
+    width: 4em;
+    margin: 0 auto;
+    flex: none;
+    -webkit-transition-duration: .25s;
+    -moz-transition-duration: .25s;
+    -ms-transition-duration: .25s;
+    -o-transition-duration: .25s;
+    transition-duration: .25s; }
+    #site-footer .up-arrow-tent:before {
+      box-sizing: border-box;
+      position: absolute;
+      display: block;
+      content: ' ';
+      height: 4em;
+      width: 4em;
+      margin: 2em auto;
+      border-right: 5em solid transparent;
+      border-left: 5em solid transparent;
+      border-bottom: 5em solid black; }
+    #site-footer .up-arrow-tent:after {
+      position: absolute;
+      display: block;
+      content: ' ';
+      top: 4em;
+      z-index: 3;
+      border-right: 2em solid transparent;
+      border-left: 2em solid transparent;
+      border-bottom: 2em solid white; }
+    #site-footer .up-arrow-tent:hover:after {
+      top: 3.5em; }
   #site-footer #newsletter {
     padding: 0 1.6667em 1.6667em 1.6667em;
     margin: 0 0 1.6667em 0; }
