--- a/promo/sass/typography.scss
+++ b/promo/sass/typography.scss
@@ -188,7 +188,7 @@ blockquote{
 	width:100%;
 	text-align:center;
 	font-style:italic; 
-	line-height:150%; 
+	line-height:125%; 
 	font-size:2.5em; 
 	float:left;  
 	font-style:italic; 
@@ -202,7 +202,7 @@ blockquote{
 		font-size:3.5em;
 	}
 	@media screen and (min-width:(em(1400))){
-		font-size:5em;
+		//font-size:5em;
 	}
 }
 
@@ -225,10 +225,10 @@ font-size:1.25em;
 padding:1em 0;
 line-height:150%;
 	@media screen and (min-width:(em(800))){
-		font-size:1.5em;
+		font-size:1.25em;
 	}
 	@media screen and (min-width:(em(1400))){
-		font-size:2em;
+		//font-size:2em;
 	}
 }
 
