Pull New Content

--- a/promo/css/custom.css
+++ b/promo/css/custom.css
@@ -322,7 +322,7 @@ article {
   .nontouchnav .next {
     right: 0; }
 
-/*! responsive-nav.js v1.0.15 by @viljamis */
+/* responsive-nav.js v1.0.15 by @viljamis */
 .js #info-1 {
   clip: rect(0 0 0 0);
   max-height: 0;
