--- a/promo/css/custom.css
+++ b/promo/css/custom.css
@@ -155,10 +155,18 @@
   content: "\25ca"; }
 
 body {
-  font-family: "adobe-garamond-pro", georgia, times, serif; }
+  font-family: "adobe-garamond-pro", georgia, times, serif;
+  font-size: 80%; }
 
 h1, h2, h3 {
-  font-family: "proxima-nova-condensed", tahoma, sans-serif; }
+  font-family: "proxima-nova-condensed", tahoma, sans-serif;
+  text-align: center; }
+
+h1, h2 {
+  font-weight: 400; }
+
+h3 {
+  font-weight: 600; }
 
 p {
   font-size: 1em; }
@@ -202,12 +210,7 @@ figure {
   max-width: 50em; }
 
 figcaption {
-  font-size: 1.25em;
-  padding: 1em 0;
-  line-height: 150%; }
-  @media screen and (min-width: 50em) {
-    figcaption {
-      font-size: 1.25em; } }
+  padding: 1em 0; }
 
 strong {
   font-weight: 800; }
@@ -224,12 +227,6 @@ strong {
   margin-right: .4em;
   letter-spacing: .1em;
   line-height: 0em; }
-
-.frame {
-  width: 100%;
-  max-width: 50em;
-  text-align: center;
-  padding: 2em; }
 
 .button {
   font-family: 'proxima-nova-condensed', helvetica, arial, sans-serif;
@@ -249,17 +246,15 @@ strong {
   display: flex;
   width: 100%;
   min-height: 25em; }
-
-.full-screen-content {
-  margin: auto; }
+  .full-screen-container .full-screen-content {
+    margin: auto; }
 
 .vertical-container {
   display: -webkit-flex;
   display: flex;
   height: 300px; }
-
-.vertically-centered {
-  margin: auto; }
+  .vertical-container .vertically-centered {
+    margin: auto; }
 
 article {
   width: 100%;
@@ -272,98 +267,52 @@ article {
     max-width: 50em;
     margin: 0 auto; }
 
-.swipe {
-  overflow: hidden;
-  visibility: hidden;
-  position: relative; }
+section {
+  width: 100%;
+  clear: both; }
 
-.swipe-wrap {
-  overflow: hidden;
-  position: relative; }
+.g1, .g2, .g3, .g4, .g5, .g6 {
+  display: block;
+  margin: 0;
+  padding: 0;
+  float: left; }
 
-.swipe-wrap > div {
-  position: relative;
-  float: left;
+figure {
+  position: relative; }
+  figure figcaption {
+    text-align: center; }
+    figure figcaption h3 {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 1rem; }
+
+nav {
+  margin: 0 auto;
+  display: flex; }
+  nav a {
+    flex: 1;
+    text-align: center; }
+
+.g1 {
   width: 100%; }
 
-.nontouchnav {
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  padding: .25em 0;
-  width: 100%;
-  z-index: 1000;
-  text-align: center;
-  font-size: 1.5em;
-  overflow: hidden; }
-  @media screen and (min-width: 62.5em) {
-    .nontouchnav {
-      display: block; } }
-  .nontouchnav div {
-    position: absolute;
-    color: #888888;
-    width: 1.5em;
-    cursor: pointer;
-    text-align: center;
-    top: 0;
-    bottom: 0;
-    padding-top: 27%;
-    background-color: rgba(255, 255, 255, 0);
-    opacity: 0;
-    -webkit-transition-duration: .25s;
-    -moz-transition-duration: .25s;
-    -ms-transition-duration: .25s;
-    -o-transition-duration: .25s;
-    transition-duration: .25s; }
-    .nontouchnav div:hover {
-      background-color: rgba(255, 255, 255, 0.75);
-      opacity: 0.5;
-      color: black;
-      -webkit-transition-duration: .25s;
-      -moz-transition-duration: .25s;
-      -ms-transition-duration: .25s;
-      -o-transition-duration: .25s;
-      transition-duration: .25s; }
-  .nontouchnav .prev {
-    left: 0; }
-  .nontouchnav .next {
-    right: 0; }
+.g2 {
+  width: 50%; }
 
-/* responsive-nav.js v1.0.15 by @viljamis */
-.js #info-1 {
-  clip: rect(0 0 0 0);
-  max-height: 0;
-  position: absolute;
-  display: block;
-  overflow: hidden;
-  zoom: 1; }
+.g3, .third {
+  float: left;
+  width: 33.333%; }
 
-#info-1.opened {
-  max-height: 9999px;
-  padding: 0 0 6em 0; }
+.g4 {
+  width: 25%; }
 
-.expand {
-  font-weight: bold;
-  color: white;
-  padding: 0;
-  border: 0;
-  cursor: pointer; }
+.g5 {
+  width: 20%; }
 
-a.closed {
-  transition: 2s; }
-
-a.opened {
-  display: block;
-  font-size: 1.1em;
-  /* Safari */
-  -webkit-transform: rotateY(-180deg);
-  -webkit-transform: rotateZ(-45deg);
-  /* Firefox */
-  -moz-transform: rotateZ(-45deg);
-  /* IE */
-  -ms-transform: rotateZ(-45deg);
-  /* Opera */
-  -o-transform: rotateZ(-45deg); }
+.g6 {
+  width: 16.667%; }
 
 body {
   background-color: white;
@@ -398,421 +347,15 @@ a:visited {
 #main {
   position: relative; }
 
-/* ==========================================================================
-   Intro Section
-   ========================================================================== */
-#intro {
-  background-image: url(../img/home_hero.jpg);
-  background-size: cover;
-  background-position: 50% 20%; }
-  #intro .frame figure {
-    margin: 0 auto 1em;
-    padding: 0;
-    width: 15.625em; }
-    @media screen and (min-width: 31.25em) {
-      #intro .frame figure {
-        width: 18.75em; } }
-    @media screen and (min-width: 50em) {
-      #intro .frame figure {
-        width: 37.5em; } }
-    #intro .frame figure a {
-      color: black;
-      font-weight: bold; }
-  #intro .frame #arrow {
-    position: absolute;
-    top: 7em;
-    left: 0;
-    right: 0;
-    z-index: 1000; }
-    #intro .frame #arrow .wrap {
-      display: block;
-      cursor: pointer;
-      color: black;
-      text-decoration: none;
-      width: 4em;
-      margin: 0 auto; }
-      #intro .frame #arrow .wrap img {
-        width: 100%; }
-  #intro .image-filter {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-clip: text;
-    -webkit-background-clip: text;
-    background-image: url(../img/home_hero.jpg);
-    -webkit-text-fill-color: transparent;
-    background-size: cover;
-    background-position: 50% 25%;
-    background-repeat: repeat; }
-  #intro #logo-mask {
-    text-align: center;
-    width: 100%;
-    margin: auto; }
-    #intro #logo-mask h1 {
-      font-size: 4em;
-      margin: 0 0;
-      padding: 0; }
-      @media screen and (min-width: 37.5em) {
-        #intro #logo-mask h1 {
-          font-size: 6em; } }
-      @media screen and (min-width: 50em) {
-        #intro #logo-mask h1 {
-          font-size: 8em; } }
-      @media screen and (min-width: 87.5em) {
-        #intro #logo-mask h1 {
-          font-size: 10em; } }
-
-#intro-arrow {
-  display: block;
-  -webkit-animation: myfirst 8s ease-in-out 1s infinite alternate;
-  /* Chrome, Safari, Opera */
-  animation: myfirst 8s ease-in-out 1s infinite alternate;
-  /* Standard syntax */ }
-
-@-webkit-keyframes myfirst {
-  0% {
-    padding-top: 0; }
-
-  05% {
-    padding-top: .5em; }
-
-  10% {
-    padding-top: 0; }
-
-  90% {
-    padding-top: 0; }
-
-  95% {
-    padding-top: .5em; }
-
-  100% {
-    padding-top: 0; } }
-
-/* ==========================================================================
-   Question Section
-   ========================================================================== */
-#question {
-  position: relative;
-  background-image: url(../img/quote_bg_2000.jpg);
-  background-position: 50% 50%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: white; }
-  #question .frame {
-    position: relative;
-    z-index: 2; }
-  #question a {
-    color: white;
-    text-decoration: none; }
-  #question h1 {
-    color: white; }
-  #question .color-filter {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #43b656;
-    opacity: .75;
-    z-index: 1; }
-  #question #definition-link {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    text-align: center;
-    padding: 1em;
-    text-decoration: none;
-    border: none;
-    z-index: 2;
-    font-weight: bold; }
-
-#because {
-  position: fixed;
-  top: 0;
-  z-index: 1000;
-  background-color: rgba(0, 0, 0, 0.95);
-  color: #888888;
-  font-family: 'proxima-nova-condensed', helvetica, arial, sans-serif;
-  -webkit-transition-duration: .25s;
-  -moz-transition-duration: .25s;
-  -ms-transition-duration: .25s;
-  -o-transition-duration: .25s;
-  transition-duration: .25s; }
-  #because a {
-    display: block;
-    color: #43b656;
-    font-weight: bold;
-    text-decoration: none;
-    border: 0.25em solid #43b656;
-    margin: .5em;
-    padding: 1em;
-    line-height: 150%; }
-  #because small {
-    font-size: 1rem;
-    color: #43b656; }
-
-#reasons {
-  font-size: 1.5em; }
-
-.two-columns li {
-  float: left;
-  width: 50%; }
-
 h2 {
-  margin-top: 3em; }
+  padding: 8rem 3rem;
+  margin: 0 auto; }
 
-/* ==========================================================================
-   Definition Section
-   ========================================================================== */
-#definition {
-  position: relative;
-  background-color: #eeeeee;
-  background-image: url(../img/cartographer.jpg);
-  text-align: center; }
-  #definition .frame p {
-    font-family: 'proxima-nova-condensed', helvetica, sans-serif; }
-  #definition .circle {
-    background-color: #43b656;
-    width: 18.75em;
-    padding: 0 0 3em;
-    margin: 0 auto;
-    line-height: 1em;
-    border: 0.5em solid black; }
-    @media screen and (min-width: 43.75em) {
-      #definition .circle {
-        width: 22.5em;
-        height: 22.5em;
-        padding: 0;
-        -webkit-border-radius: 50%;
-        -moz-border-radius: 50%;
-        -ms-border-radius: 50%;
-        -o-border-radius: 50%;
-        border-radius: 50%; } }
-    #definition .circle h1, #definition .circle h2 {
-      color: white;
-      font-size: 2.5em;
-      margin: 2.125em 0 .75em 0; }
-    #definition .circle p {
-      font-size: 1.5em; }
-  #definition .stretch-arrow-down {
-    position: relative;
-    height: 6em;
-    width: .125em;
-    margin: 0 auto 3em;
-    background-color: black; }
-    #definition .stretch-arrow-down:before, #definition .stretch-arrow-down:after {
-      position: absolute;
-      display: block;
-      content: ' ';
-      background-color: black;
-      height: 3em;
-      width: .125em;
-      bottom: -.5em;
-      border-radius: 0.125em; }
-    #definition .stretch-arrow-down:before {
-      left: -1em;
-      transform: rotate(-45deg); }
-    #definition .stretch-arrow-down:after {
-      right: -1em;
-      transform: rotate(45deg); }
-  #definition #want-in {
-    text-align: center;
-    font-family: "proxima-nova-condensed", tahoma, sans-serif;
-    font-weight: 800;
-    font-size: 2em;
-    margin: 0;
-    text-decoration: none;
-    color: black; }
-
-/* ==========================================================================
-   Sign Up Form
-   ========================================================================== */
-#sign-up {
-  background-color: white;
-  color: #888888; }
-  #sign-up .frame {
-    max-width: 37.5em; }
-  #sign-up h1, #sign-up h2, #sign-up h3 {
-    color: #43b656; }
-  #sign-up .indicates-required {
-    text-align: right;
-    color: #4e4e4e; }
-  #sign-up #TTP {
-    font-family: "proxima-nova-condensed", tahoma, sans-serif;
-    font-weight: 800;
-    text-align: center;
-    margin: 1em 0 0 0;
-    line-height: 1em;
-    color: #43b656; }
-  #sign-up p {
-    text-align: center; }
-  #sign-up a {
-    font-weight: 800;
-    color: #888888;
-    text-decoration: none;
-    border-bottom: 1px solid #43b656; }
-    #sign-up a:hover {
-      color: #43b656; }
-  #sign-up .mc-field-group {
-    margin: 0;
-    padding: .5em 0;
-    text-align: left; }
-    #sign-up .mc-field-group label {
-      margin: 0;
-      padding: 0;
-      text-indent: none;
-      font-weight: bold;
-      font-family: "proxima-nova-condensed", tahoma, sans-serif;
-      text-align: center; }
-    #sign-up .mc-field-group input {
-      width: 100%;
-      margin: .5em 0 0 0;
-      padding: .5em;
-      border: 2px solid black;
-      outline: none;
-      -webkit-border: none; }
-      #sign-up .mc-field-group input:focus {
-        background-color: white; }
-    #sign-up .mc-field-group select {
-      display: block;
-      outline: none;
-      -webkit-border: none;
-      border: 0.5em solid #eeeeee;
-      background-color: #eeeeee;
-      margin: .5em 0;
-      padding: 0;
-      width: 100%; }
-      #sign-up .mc-field-group select:focus {
-        background-color: white;
-        border: 0.5em solid white; }
-    #sign-up .mc-field-group ul {
-      margin: .25em 0;
-      width: 100%; }
-    #sign-up .mc-field-group li {
-      float: left;
-      margin: 0 2em 0 0; }
-    #sign-up .mc-field-group input[type="radio"] {
-      float: left;
-      width: auto;
-      margin: .5em 1em 0 0; }
-  #sign-up .mc-field-group.left {
-    float: left;
-    width: 47.5%;
-    margin: 0 2.5% 0 0; }
-  #sign-up .mc-field-group.right {
-    float: left;
-    width: 47.5%;
-    margin: 0 0 0 2.5%; }
-  #sign-up input[type="submit"], #sign-up .inline-button {
-    background-color: #43b656;
-    border: none;
-    display: block;
-    padding: 1em !important;
-    text-align: center;
-    margin: 0 auto;
-    outline: none;
-    -webkit-border: none;
-    -webkit-border-radius: .5em;
-    -moz-border-radius: .5em;
-    -ms-border-radius: .5em;
-    -o-border-radius: .5em;
-    border-radius: .5em; }
-  #sign-up .mc-address-group {
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-duration: 0.5s;
-    -ms-transition-duration: 0.5s;
-    -o-transition-duration: 0.5s;
-    transition-duration: 0.5s;
-    max-height: auto;
-    opacity: 1; }
-    #sign-up .mc-address-group.hidden {
-      max-height: 0;
-      opacity: 0;
-      -webkit-transition-duration: 0.5s;
-      -moz-transition-duration: 0.5s;
-      -ms-transition-duration: 0.5s;
-      -o-transition-duration: 0.5s;
-      transition-duration: 0.5s; }
-
-#smore {
-  display: block;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  text-align: center;
-  padding: 1em;
-  text-decoration: none;
-  border: none; }
-
-/* ==========================================================================
-   Footer
-   ========================================================================== */
 #site-footer {
-  float: left;
-  width: 100%;
+  background-color: black;
+  color: #888888;
   text-align: center;
-  padding: 1em 0 0;
-  margin: 0;
-  background-color: white;
-  z-index: -1;
-  color: #222222; }
-  #site-footer ul {
-    color: #4e4e4e;
-    font-size: 1em;
-    margin: 0 auto;
-    max-width: 18.75em; }
-    #site-footer ul li {
-      float: left;
-      text-align: center;
-      margin: 1em 0;
-      width: 33.333%; }
-      #site-footer ul li a {
-        text-decoration: none; }
-  #site-footer .up-arrow-tent {
-    position: relative;
-    width: 4em;
-    margin: 0 auto;
-    flex: none;
-    -webkit-transition-duration: .25s;
-    -moz-transition-duration: .25s;
-    -ms-transition-duration: .25s;
-    -o-transition-duration: .25s;
-    transition-duration: .25s; }
-    #site-footer .up-arrow-tent:before {
-      box-sizing: border-box;
-      position: absolute;
-      display: block;
-      content: ' ';
-      height: 4em;
-      width: 4em;
-      margin: 2em auto;
-      border-right: 5em solid transparent;
-      border-left: 5em solid transparent;
-      border-bottom: 5em solid black; }
-    #site-footer .up-arrow-tent:after {
-      position: absolute;
-      display: block;
-      content: ' ';
-      top: 4em;
-      z-index: 3;
-      border-right: 2em solid transparent;
-      border-left: 2em solid transparent;
-      border-bottom: 2em solid white; }
-    #site-footer .up-arrow-tent:hover:after {
-      top: 3.5em; }
-  #site-footer #newsletter {
-    padding: 0 1.6667em 1.6667em 1.6667em;
-    margin: 0 0 1.6667em 0; }
-    @media screen and (min-width: 50em) {
-      #site-footer #newsletter {
-        width: 39%;
-        padding: 0 5%;
-        float: left; } }
-  #site-footer #copyright {
-    width: 100%; }
+  padding: 5rem 0; }
 
 /* ==========================================================================
    Helper classes
