--- a/promo/sass/typography.scss
+++ b/promo/sass/typography.scss
@@ -160,10 +160,18 @@
 
 body{
 	font-family:"adobe-garamond-pro", georgia, times, serif;
+	font-size:80%;
 }
 
 h1, h2, h3{
 	font-family:"proxima-nova-condensed", tahoma, sans-serif;
+	text-align:center;
+}
+h1, h2{
+	font-weight:400;
+}
+h3{
+	font-weight:600;
 }
 
 
@@ -221,15 +229,7 @@ figure{
 }
 
 figcaption{
-font-size:1.25em;
 padding:1em 0;
-line-height:150%;
-	@media screen and (min-width:(em(800))){
-		font-size:1.25em;
-	}
-	@media screen and (min-width:(em(1400))){
-		//font-size:2em;
-	}
 }
 
 strong{
