--- a/promo/sass/mixins.scss
+++ b/promo/sass/mixins.scss
@@ -4,6 +4,7 @@ $text: #4e4e4e;
 
 $action-color:rgb(67,182,86);
 $green:rgb(67,182,86);
+$green-translucent:rgba(67,182,86,0.85);
 
 $black: #000;
 $dark-grey: #222222;
