--- a/promo/css/custom.css
+++ b/promo/css/custom.css
@@ -271,21 +271,27 @@ section {
   width: 100%;
   clear: both; }
 
-.g1, .g2, .g3, .g4, .g5, .g6 {
-  display: block;
-  margin: 0;
-  padding: 0;
+.full {
+  float: left;
+  width: 100%; }
+
+.half {
+  float: left;
+  width: 50%; }
+
+.third {
   float: left; }
+  @media screen and (min-width: 50em) {
+    .third {
+      width: 33.333%; } }
 
 figure {
   position: relative; }
+  figure img {
+    width: 100%; }
   figure figcaption {
     text-align: center; }
     figure figcaption h3 {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
       padding: 1rem; }
 
 nav {
@@ -294,25 +300,6 @@ nav {
   nav a {
     flex: 1;
     text-align: center; }
-
-.g1 {
-  width: 100%; }
-
-.g2 {
-  width: 50%; }
-
-.g3, .third {
-  float: left;
-  width: 33.333%; }
-
-.g4 {
-  width: 25%; }
-
-.g5 {
-  width: 20%; }
-
-.g6 {
-  width: 16.667%; }
 
 body {
   background-color: white;
@@ -347,6 +334,21 @@ a:visited {
 #main {
   position: relative; }
 
+#quote {
+  width: 100%;
+  background-image: url(../img/quote_bg_800.jpg);
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat; }
+  #quote figure {
+    background-color: rgba(67, 182, 86, 0.85); }
+
+#logo {
+  margin-top: 5rem; }
+  #logo img {
+    width: 50%;
+    margin: 0 auto; }
+
 h2 {
   padding: 8rem 3rem;
   margin: 0 auto; }
@@ -356,6 +358,8 @@ h2 {
   color: #888888;
   text-align: center;
   padding: 5rem 0; }
+  #site-footer h3 {
+    color: #eeeeee; }
 
 /* ==========================================================================
    Helper classes
