--- a/promo/css/custom.css
+++ b/promo/css/custom.css
@@ -157,6 +157,9 @@
 body {
   font-family: "adobe-garamond-pro", georgia, times, serif;
   font-size: 80%; }
+  @media screen and (min-width: 37.5em) {
+    body {
+      font-size: 1em; } }
 
 h1, h2, h3 {
   font-family: "proxima-nova-condensed", tahoma, sans-serif;
@@ -210,6 +213,7 @@ figure {
   max-width: 50em; }
 
 figcaption {
+  font-size: 1rem;
   padding: 1em 0; }
 
 strong {
@@ -303,7 +307,8 @@ nav {
 
 body {
   background-color: white;
-  color: #222222; }
+  color: #222222;
+  font-size: 1rem; }
 
 nav ul {
   margin: 0;
@@ -334,14 +339,45 @@ a:visited {
 #main {
   position: relative; }
 
-#quote {
-  width: 100%;
-  background-image: url(../img/quote_bg_800.jpg);
-  background-position: 50% 50%;
+section {
+  padding: 0rem 0; }
+
+#intro {
+  padding: 0; }
+  #intro .full-screen-content {
+    padding: 0; }
+
+#intro .image-filter {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0;
+  background-clip: text;
+  -webkit-background-clip: text;
+  background-image: url(../img/home_hero.jpg);
+  -webkit-text-fill-color: transparent;
   background-size: cover;
-  background-repeat: no-repeat; }
-  #quote figure {
-    background-color: rgba(67, 182, 86, 0.85); }
+  background-position: 50% 25%;
+  background-repeat: repeat; }
+#intro #logo-mask {
+  text-align: center;
+  width: 100%;
+  margin: auto; }
+  #intro #logo-mask h1 {
+    font-size: 4em;
+    font-weight: 700;
+    margin: 0 0;
+    padding: 0; }
+    @media screen and (min-width: 37.5em) {
+      #intro #logo-mask h1 {
+        font-size: 6em; } }
+    @media screen and (min-width: 50em) {
+      #intro #logo-mask h1 {
+        font-size: 8em; } }
+    @media screen and (min-width: 87.5em) {
+      #intro #logo-mask h1 {
+        font-size: 10em; } }
 
 #logo {
   margin-top: 5rem; }
@@ -349,17 +385,187 @@ a:visited {
     width: 50%;
     margin: 0 auto; }
 
+#primary {
+  width: 80%;
+  margin: 0 auto;
+  max-width: 40rem; }
+  #primary ul {
+    width: 100%; }
+    #primary ul li {
+      width: 50%;
+      text-align: center; }
+      #primary ul li a {
+        position: relative;
+        font-family: 'proxima-nova-condensed',helvetica,arial,sans-serif;
+        font-weight: 600;
+        font-size: 1.25em;
+        line-height: 6em;
+        text-align: center;
+        display: block;
+        width: 6em;
+        height: 6em;
+        margin: 0 auto;
+        padding: 0;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box; }
+        #primary ul li a:after {
+          position: absolute;
+          display: block;
+          content: ' ';
+          z-index: -1;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          border: 2px solid #43b656;
+          -webkit-transition-duration: .25s;
+          -moz-transition-duration: .25s;
+          -ms-transition-duration: .25s;
+          -o-transition-duration: .25s;
+          transition-duration: .25s;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          -ms-border-radius: 50%;
+          -o-border-radius: 50%;
+          border-radius: 50%;
+          color: #43b656;
+          box-sizing: border-box;
+          box-sizing: -webkit-border-box; }
+        #primary ul li a:hover {
+          color: white; }
+          #primary ul li a:hover:after {
+            border: 3em solid #43b656;
+            background-color: #43b656;
+            color: white;
+            box-sizing: border-box;
+            -webkit-box-sizing: border-box; }
+        #primary ul li a:active:after {
+          border: 3em solid black;
+          background-color: black; }
+
+#feels figure {
+  float: left;
+  width: 100%; }
+  @media screen and (min-width: 37.5em) {
+    #feels figure {
+      width: 33.333%; } }
+#feels figcaption {
+  position: absolute; }
+
+#quote {
+  width: 100%;
+  background-image: url(../img/quote_bg_800.jpg);
+  min-height: 20rem;
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat; }
+  #quote figure {
+    color: white;
+    margin: auto;
+    padding: 10rem 0;
+    width: 15.625em; }
+    @media screen and (min-width: 31.25em) {
+      #quote figure {
+        width: 18.75em; } }
+    @media screen and (min-width: 50em) {
+      #quote figure {
+        width: 37.5em; } }
+    #quote figure a {
+      color: black;
+      font-weight: bold; }
+      #quote figure a:hover, #quote figure a:active {
+        color: white; }
+
 h2 {
-  padding: 8rem 3rem;
+  padding: 3rem;
   margin: 0 auto; }
 
+form {
+  margin: 2em 0; }
+
+#sign-up {
+  background-color: white;
+  color: #888888;
+  padding: 10rem 0 2rem 0;
+  font-size: 1rem; }
+  #sign-up .frame {
+    max-width: 37.5em;
+    margin: 1rem auto;
+    padding: 0 2em; }
+
+.mc-field-group {
+  font-family: "proxima-nova-condensed", tahoma, sans-serif;
+  margin: 0;
+  padding: .5em 0;
+  text-align: left; }
+  .mc-field-group label {
+    float: left;
+    width: 100%;
+    margin: 0;
+    padding: .5em 0;
+    text-indent: none;
+    font-weight: 400;
+    font-family: "proxima-nova-condensed", arial, tahoma, sans-serif;
+    text-align: left;
+    font-size: 1rem;
+    color: #888888; }
+
+input:-webkit-autofill {
+  background-color: white; }
+
+input[type="email"] {
+  font-family: "proxima-nova-condensed", arial, tahoma, sans-serif;
+  float: left;
+  width: 75%;
+  font-weight: 600;
+  font-size: 1rem !important;
+  padding: 1em !important;
+  border-left: 2px solid #43b656;
+  border-bottom: 2px solid #43b656;
+  border-top: 2px solid #43b656;
+  border-right: none;
+  box-sizing: border-box;
+  outline: none;
+  -webkit-border: none; }
+  input[type="email"]:focus {
+    background-color: white; }
+
+input[type="submit"] {
+  font-family: "proxima-nova-condensed", arial, tahoma, sans-serif;
+  font-weight: 600;
+  background-color: #43b656;
+  float: left;
+  width: 25%;
+  box-sizing: border-box;
+  border: 2px solid #43b656;
+  display: block;
+  font-size: 1rem !important;
+  padding: 1em !important;
+  text-align: center;
+  margin: 0 auto;
+  outline: none;
+  letter-spacing: .1em; }
+  input[type="submit"]:hover, input[type="submit"]:active {
+    color: white; }
+  input[type="submit"]:active {
+    background-color: black; }
+
+#social-links {
+  width: 10rem;
+  margin: 1rem auto; }
+  #social-links ul {
+    width: 100%; }
+    #social-links ul li {
+      width: 33.333%;
+      text-align: center; }
+
 #site-footer {
-  background-color: black;
+  background-color: #222222;
   color: #888888;
   text-align: center;
   padding: 5rem 0; }
   #site-footer h3 {
-    color: #eeeeee; }
+    color: white; }
 
 /* ==========================================================================
    Helper classes
